# django-poetry-bridger

./: db.sqlite3  pyproject.toml
app/: __init__.py  api.py  models.py  serializers.py  urls.py
app/button/: to_do.py
app/display/: religion.py  to_do.py
app/migrations/: 0001_initial.py  0002_alter_student_age.py  0003_auto_20211110_0955.py
poetrydjango/: routing.py  settings.py  urls.py  wsgi.py
